--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-README.md
+HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -31,6 +31,4 @@ build/
 
 ### VS Code ###
 .vscode/
-
 .DS_Store
-
